Added basic HTML structure

--- a/index.html
+++ b/index.html
@@ -25,6 +25,31 @@
 </head>
 
 <body>
+  <nav class="navbar">
+    <!-- LOGO -->
+    <div class="logo">
+      <img src="./assets/images/logo.png" alt="Logo">
+    </div>
+    <!-- MENU -->
+    <div class="menu">
+      <ul>
+        <li><a href="#">FALCON 9</a></li>
+        <li><a href="#">FALCON HEAVY</a></li>
+        <li><a href="#">DRAGON</a></li>
+        <li><a href="#">STARSHIP</a></li>
+        <li><a href="#">HUMAN SPACEFLIGHT</a></li>
+        <li><a href="#">RIDESHARE</a></li>
+        <li><a href="#">STARLINK</a></li>
+        <li><a href="#">SHOP</a></li>
+      </ul>
+    </div>
+    <!-- Ham-Burger -->
+    <div class="hamburger">
+      <div class="bar"></div>
+      <div class="bar"></div>
+      <div class="bar"></div>
+    </div>
+  </nav>
 </body>
 
 </html>
