--- a/index.html
+++ b/index.html
@@ -50,6 +50,73 @@
       <div class="bar"></div>
     </div>
   </nav>
+  <!-- Sections A -->
+  <div class="section section-a">
+    <div class="section-a-bg-img">
+    </div>
+    <div class="section-text">
+      <h4>UPCOMING LAUNCH</h4>
+      <h1>CRS-25 MISSION</h1>
+      <button class="btn"><span>REWATCH</span></button>
+    </div>
+  </div>
+  <!-- Section B -->
+  <div class="section section-b">
+    <div class="section-b-bg-img"></div>
+    <div class="section-text">
+      <h4>RECENT LAUNCH</h4>
+      <h1>STARLINK MISSION</h1>
+      <button class="btn"><span>REWATCH</span></button>
+    </div>
+  </div>
+  <!-- Section C -->
+  <div class="section section-c">
+    <div class="section-c-bg-img"></div>
+    <div class="section-text">
+      <h4>RECENT MISSION</h4>
+      <h1>SES-22 MISSION</h1>
+      <button class="btn"><span>REWATCH</span></button>
+    </div>
+  </div>
+  <!-- Section D -->
+  <div class="section section-d">
+    <div class="section-d-bg-img"></div>
+    <div class="section-text">
+      <h4>RECENT LAUNCH</h4>
+      <h1>GLOBALSTAR FM15<br> MISSION</h1>
+      <button class="btn"><span>REWATCH</span></button>
+    </div>
+  </div>
+  <!-- Section E -->
+  <div class="section section-e">
+    <div class="section-e-bg-img"></div>
+    <div class="section-text">
+      <h1>STARSHIP UPDATE</h1>
+      <button class="btn"><span>REWATCH</span></button>
+    </div>
+  </div>
+  <!-- Section F -->
+  <div class="section section-f">
+    <div class="section-f-bg-img"></div>
+    <div class="section-text">
+      <h1>STARSHIP TO ADD NASA<br> ASTRONAUTS ON THE<br> MOON</h1>
+      <button class="btn"><span>REWATCH</span></button>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <footer>
+    <ul>
+      <li><span>SPACEX &copy; 2023</span></li>
+      <li><a href="#">TWITTER</a></li>
+      <li><a href="#">YOUTUBE</a></li>
+      <li><a href="#">INSTAGRAM</a></li>
+      <li><a href="#">FLICKR</a></li>
+      <li><a href="#">LINKEDIN</a></li>
+      <li><a href="#">PRIVACY</a></li>
+      <li><a href="#">SUPPLIERS</a></li>
+    </ul>
+  </footer>
 </body>
 
 </html>
